--- a/src/views/pages/search.ejs
+++ b/src/views/pages/search.ejs
@@ -61,7 +61,7 @@
           <div class="flex flex-wrap gap-2">
             <% article.tags.forEach(tag=> { %>
             <a
-              href="/all/?tag=<%= tag.tag %>"
+              href="/tag/<%= tag.tag %>"
               class="rounded-full bg-gray-100 px-2 py-1 text-sm transition-colors duration-200 hover:bg-blue-500 hover:text-white"
             >
               #<%= tag.tag %>
