--- a/src/views/writer/create-post.ejs
+++ b/src/views/writer/create-post.ejs
@@ -1,15 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Đăng Bài Viết</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <script src="https://cdn.tiny.cloud/1/zdydn25rh7p4n5ascy4i8ktwypa83h58l70erb1yga9fxd2e/tinymce/7/tinymce.min.js"
-        referrerpolicy="origin"></script>
-
-    <script src="https://cdn.tailwindcss.com"></script> -->
 <script>
   tinymce.init({
     selector: "#content", // Chọn textarea để sử dụng TinyMCE
@@ -25,12 +13,15 @@
     },
   });
 </script>
-<!-- </head> -->
 
 <body>
   <div class="container mx-auto py-5" style="width: 1000px">
     <h1 class="mb-6 text-center text-4xl font-bold">Post New Article</h1>
-    <form action="/post" method="POST" enctype="multipart/form-data">
+    <form
+      action="/post"
+      method="POST"
+      enctype="application/x-www-form-urlencoded"
+    >
       <div class="mb-4">
         <label for="title" class="block text-sm font-medium text-gray-700"
           >Title</label
@@ -57,11 +48,11 @@
       </div>
       <div class="mb-4">
         <label for="summary" class="block text-sm font-medium text-gray-700"
-          >Summary</label
+          >Abstract</label
         >
         <textarea
           id="summary"
-          name="summary"
+          name="abstract"
           required
           class="mt-1 block w-full rounded-md border border-gray-300 p-2 shadow-sm"
         ></textarea>
