add /tag and /tag/:id routes

--- a/src/views/layouts/main-layout.ejs
+++ b/src/views/layouts/main-layout.ejs
@@ -181,7 +181,7 @@
 
     <!-- Navbar Section -->
     <!-- make this separated from header to apply sticky effect -->
-    <%if (typeof categories != "undefined") { %>
+    <%if (typeof categories != "undefined" && categories) { %>
     <nav
       class="sticky top-0 z-10 flex h-14 w-full items-center justify-center bg-white"
     >
