--- a/src/views/pages/create-post.ejs
+++ b/src/views/pages/create-post.ejs
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -8,109 +8,67 @@
     <link rel="stylesheet" href="/css/style.css">
     <script src="https://cdn.tiny.cloud/1/zdydn25rh7p4n5ascy4i8ktwypa83h58l70erb1yga9fxd2e/tinymce/7/tinymce.min.js"
         referrerpolicy="origin"></script>
-
-    <script src="https://cdn.tailwindcss.com"></script> -->
-<script>
-  tinymce.init({
-    selector: "#content", // Chọn textarea để sử dụng TinyMCE
-    plugins: "image media link",
-    toolbar: "undo redo | styles | bold italic | link image | media",
-    images_upload_url: "/post/image", // URL để upload hình ảnh
-    media_url_restrict: false,
-    // Cấu hình upload hình ảnh
-    setup: function (editor) {
-      editor.on("change", function () {
-        editor.save();
-      });
-    },
-  });
-</script>
-<!-- </head> -->
-
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tinymce.init({
+            selector: '#content', // Chọn textarea để sử dụng TinyMCE
+            plugins: 'image media link',
+            toolbar: 'undo redo | styles | bold italic | link image | media',
+            images_upload_url: '/upload/image', // URL để upload hình ảnh
+            media_url_restrict: false,
+            // Cấu hình upload hình ảnh
+            setup: function (editor) {
+                editor.on('change', function () {
+                    editor.save();
+                });
+            }
+        });
+    </script>
+</head>
 <body>
-  <div class="container mx-auto py-5" style="width: 1000px">
-    <h1 class="mb-6 text-center text-4xl font-bold">Post New Article</h1>
-    <form action="/post" method="POST" enctype="multipart/form-data">
-      <div class="mb-4">
-        <label for="title" class="block text-sm font-medium text-gray-700"
-          >Title</label
-        >
-        <input
-          type="text"
-          id="title"
-          name="title"
-          required
-          class="mt-1 block h-12 w-full rounded-md border border-gray-300 p-2 shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-200"
-        />
-      </div>
-      <div class="mb-4">
-        <label for="author" class="block text-sm font-medium text-gray-700"
-          >Author</label
-        >
-        <input
-          type="text"
-          id="author"
-          name="author"
-          required
-          class="mt-1 block h-12 w-full rounded-md border border-gray-300 p-2 shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-200"
-        />
-      </div>
-      <div class="mb-4">
-        <label for="summary" class="block text-sm font-medium text-gray-700"
-          >Summary</label
-        >
-        <textarea
-          id="summary"
-          name="summary"
-          required
-          class="mt-1 block w-full rounded-md border border-gray-300 p-2 shadow-sm"
-        ></textarea>
-      </div>
-      <div class="mb-4">
-        <label for="content" class="block text-sm font-medium text-gray-700"
-          >Content</label
-        >
-        <textarea
-          id="content"
-          name="content"
-          required
-          class="mt-1 block w-full rounded-md border border-gray-300 shadow-sm"
-        ></textarea>
-      </div>
-      <div class="mb-4">
-        <label for="category" class="block text-sm font-medium text-gray-700"
-          >Category</label
-        >
-        <select
-          id="category"
-          name="category"
-          class="mt-1 block h-12 w-full rounded-md border border-gray-300 shadow-sm"
-        >
-          <option value="news">News</option>
-          <option value="sports">Sport</option>
-          <option value="entertainment">Entertainment</option>
-          <option value="technology">Technology</option>
-        </select>
-      </div>
-      <div class="mb-4">
-        <label for="tags" class="block text-sm font-medium text-gray-700"
-          >Tags</label
-        >
-        <input
-          type="text"
-          id="tags"
-          name="tags"
-          class="mt-1 block w-full rounded-md border border-gray-300 shadow-sm"
-          placeholder="Nhập nhãn, cách nhau bằng dấu phẩy"
-        />
-      </div>
-      <div class="mt-4 flex justify-center">
-        <button type="submit" class="rounded bg-gray-800 px-4 py-2 text-white">
-          Submit
-        </button>
-      </div>
-    </form>
-  </div>
+        <div class="container mx-auto py-5" style="width: 1000px;">
+            <h1 class="text-4xl font-bold mb-6 text-center">Post New Article</h1>
+            <form action="/posts" method="POST" enctype="multipart/form-data">
+                <div class="mb-4">
+                    <label for="title" class="block text-sm font-medium text-gray-700">Title</label>
+                    <input type="text" id="title" name="title" required
+                        class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-200 h-12 p-2">
+                </div>
+                <div class="mb-4">
+                    <label for="author" class="block text-sm font-medium text-gray-700">Author</label>
+                    <input type="text" id="author" name="author" required
+                        class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-200 h-12 p-2">
+                </div>
+                <div class="mb-4">
+                    <label for="summary" class="block text-sm font-medium text-gray-700">Summary</label>
+                    <textarea id="summary" name="summary" required
+                        class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2"></textarea>
+                </div>
+                <div class="mb-4">
+                    <label for="content" class="block text-sm font-medium  text-gray-700">Content</label>
+                    <textarea id="content" name="content" required
+                        class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm"></textarea>
+                </div>
+                <div class="mb-4">
+                    <label for="category" class="block text-sm font-medium text-gray-700">Category</label>
+                    <select id="category" name="category"
+                        class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm h-12">
+                        <option value="news">News</option>
+                        <option value="sports">Sport</option>
+                        <option value="entertainment">Entertainment</option>
+                        <option value="technology">Technology</option>
+                    </select>
+                </div>
+                <div class="mb-4">
+                    <label for="tags" class="block text-sm font-medium text-gray-700 ">Tags</label>
+                    <input type="text" id="tags" name="tags"
+                        class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm"
+                        placeholder="Nhập nhãn, cách nhau bằng dấu phẩy">
+                </div>
+                <div class="flex justify-center mt-4">
+                    <button type="submit" class="bg-gray-800 text-white px-4 py-2 rounded">Submit</button>
+                </div>
+            </form>
+        </div>
 </body>
-
-<!-- </html> -->
+</html>
