create new post + posts list

--- a/src/views/layouts/main-layout.ejs
+++ b/src/views/layouts/main-layout.ejs
@@ -157,6 +157,42 @@
                   </svg>
                   Log Out
                 </a>
+
+                <% if (userInfo.role >= 2) { %>
+                <a
+                  href="/post"
+                  class="flex items-center px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 -960 960 960"
+                    class="mr-3 size-4 text-gray-400"
+                    aria-hidden="true"
+                  >
+                    <path
+                      d="M435.48-275.48h89.04v-160h160v-89.04h-160v-160h-89.04v160h-160v89.04h160v160ZM480-60.78q-87.52 0-163.91-32.96-76.38-32.96-132.88-89.47-56.51-56.5-89.47-132.88Q60.78-392.48 60.78-480t32.96-163.91q32.96-76.38 89.47-132.88 56.5-56.51 132.88-89.47 76.39-32.96 163.91-32.96t163.91 32.96q76.38 32.96 132.88 89.47 56.51 56.5 89.47 132.88 32.96 76.39 32.96 163.91t-32.96 163.91q-32.96 76.38-89.47 132.88-56.5 56.51-132.88 89.47Q567.52-60.78 480-60.78Z"
+                    />
+                  </svg>
+
+                  Create Post
+                </a>
+                <a
+                  href="/posts"
+                  class="flex items-center px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 -960 960 960"
+                    class="mr-3 size-4 text-gray-400"
+                  >
+                    <path
+                      d="M166.78-140.78q-44.3 0-75.15-30.85-30.85-30.85-30.85-75.15v-466.44q0-44.3 30.85-75.15 30.85-30.85 75.15-30.85h626.44q44.3 0 75.15 30.85 30.85 30.85 30.85 75.15v466.44q0 44.3-30.85 75.15-30.85 30.85-75.15 30.85H166.78Zm360.57-106h265.87v-466.44H527.35v466.44ZM206.78-320h185.87v-80H206.78v80Zm0-120h185.87v-80H206.78v80Zm0-120h185.87v-80H206.78v80Zm360.57 240h185.87v-80H567.35v80Zm0-120h185.87v-80H567.35v80Zm0-120h185.87v-80H567.35v80Z"
+                    />
+                  </svg>
+
+                  My Posts
+                </a>
+                <% } %>
               </div>
             </div>
           </div>
