--- a/src/views/pages/create-post.ejs
+++ b/src/views/pages/create-post.ejs
@@ -47,7 +47,7 @@
       </div>
 
       <div class="mb-4 flex flex-row items-center gap-4">
-        <input type="checkbox" name="premium" id="summary" required />
+        <input type="checkbox" name="premium" id="summary" />
         <label
           for="premium"
           class="none block text-sm font-medium text-gray-700"
