--- a/src/views/pages/article.ejs
+++ b/src/views/pages/article.ejs
@@ -38,6 +38,10 @@
     <!-- Article Title -->
     <h1 class="mb-4 text-3xl font-bold"><%= post.name %></h1>
 
+    <p class="my-2 text-sm">
+      <%= post.views %> view<%= post.views == 1 ? "" : "s" %>
+    </p>
+
     <!-- Author Information and Publish Date -->
     <div class="mb-6 flex items-center text-gray-600">
       <img
