--- a/src/views/pages/home.ejs
+++ b/src/views/pages/home.ejs
@@ -14,7 +14,7 @@
             <img
               src="<%= article.thumbnail.small %>"
               alt="Article Image"
-              class="h-auto w-full"
+              class="h-48 w-full object-cover"
             />
 
             <!-- Article Type Tag -->
@@ -66,7 +66,7 @@
             <img
               src="<%= article.thumbnail.small %>"
               alt="Article Image"
-              class="h-auto w-full"
+              class="h-48 w-full object-cover"
             />
 
             <!-- Article Type Tag -->
@@ -117,7 +117,7 @@
             <img
               src="<%= article.thumbnail.small %>"
               alt="Article Image"
-              class="h-auto w-full"
+              class="h-48 w-full object-cover"
             />
 
             <!-- Article Type Tag -->
